--- a/src/apps/views/admin/manager/import.ejs
+++ b/src/apps/views/admin/manager/import.ejs
@@ -19,21 +19,15 @@
 		</div>
 
         <div class="row" style="margin-bottom: 20px;">
-            <div class="col-lg-5" >
+            <div class="col-lg-3" >
                 <div class="row">
-                    <canvas id="pieChartRestock" width="400" height="400"></canvas>
+                    <canvas id="pieChartRestock"></canvas>
                 </div>
             </div>
         </div>
 
 		<div id="toolbar" class="toolbar-item">
-			<div>
-				<a href="/admin/manager/soldOut" class="btn btn-success">
-					Sản phẩm đã bán
-				</a>
-			</div>
-
-            <div style="margin-left: 10px;">
+            <div>
 				<a href="/admin/manager/productBestImport" class="btn btn-info">
 					Sản phẩm nhập nhiều
 				</a>
