--- a/src/apps/views/admin/auth/forgotPass.ejs
+++ b/src/apps/views/admin/auth/forgotPass.ejs
@@ -19,13 +19,15 @@
 				<div class="panel-heading">Admin - Quên mật khẩu</div>
 				<div class="panel-body">
 					<form role="form" method="post">
-                        <% if(success.length >= 1){ %>
-							<div class="alert alert-success"><%= success%></div>
+						<% if(messages.success){ %>
+							<div id="alert" class="alert alert-success"><%= messages.success%></div>
 						<% } %>
 						
-						<%if(error) {%>
-							<div class="alert alert-danger"><%= error%></div>
-						<%}%>
+						<% if (typeof error !== 'undefined') { %>
+							<div id="alert" class="alert alert-danger">
+							  <%= error %>
+							</div>
+						<% } %>
 						<fieldset>
 							<div class="form-group">
 								<input class="form-control" placeholder="Email đăng kí tài khoản" required name="email" type="email" autofocus>
@@ -39,5 +41,15 @@
 		</div><!-- /.col-->
 	</div><!-- /.row -->	
 </body>
+
+<script>
+    // Tự động ẩn thông báo sau 1 giây
+    const errorAlert = document.getElementById('alert');
+    if (errorAlert) {
+      setTimeout(() => {
+        errorAlert.style.display = 'none';
+      }, 1000); // 1000ms = 1 giây
+    }
+</script>
 
 </html>
