--- a/src/apps/views/admin/auth/login.ejs
+++ b/src/apps/views/admin/auth/login.ejs
@@ -18,10 +18,12 @@
 			<div class="login-panel panel panel-default">
 				<div class="panel-heading">Admin - Login</div>
 				<div class="panel-body">
+					<% if (typeof error !== 'undefined') { %>
+						<div id="alert" class="alert alert-danger">
+						  <%= error %>
+						</div>
+					<% } %>
 					<form role="form" method="post">
-						<%if(error) {%>
-							<div class="alert alert-danger"><%= error%></div>
-						<%}%>
 						<fieldset>
 							<div class="form-group">
 								<input class="form-control" placeholder="E-mail" required name="email" type="email" value="<%= typeof email !== 'undefined' ? email : '' %>" autofocus>
@@ -39,5 +41,15 @@
 		</div><!-- /.col-->
 	</div><!-- /.row -->	
 </body>
+
+<script>
+    // Tự động ẩn thông báo sau 1 giây
+    const errorAlert = document.getElementById('alert');
+    if (errorAlert) {
+      setTimeout(() => {
+        errorAlert.style.display = 'none';
+      }, 1000); // 1000ms = 1 giây
+    }
+</script>
 
 </html>
