--- a/src/apps/views/admin/auth/register.ejs
+++ b/src/apps/views/admin/auth/register.ejs
@@ -18,21 +18,23 @@
 			<div class="login-panel panel panel-default">
 				<div class="panel-heading">Admin - Register</div>
 				<div class="panel-body">
+					<% if(messages.success){ %>
+						<div id="alert" class="alert alert-success"><%= messages.success%></div>
+					<% } %>
+					
+					<% if (typeof error !== 'undefined') { %>
+						<div id="alert" class="alert alert-danger">
+						  <%= error %>
+						</div>
+					<% } %>
 					<form role="form" method="post">
-						<% if(success.length >= 1){ %>
-							<div class="alert alert-success"><%= success%></div>
-						<% } %>
-						
-						<%if(error) {%>
-							<div class="alert alert-danger"><%= error%></div>
-						<%}%>
 						<fieldset>
                             <div class="form-group">
-								<input class="form-control" placeholder="Họ tên" required name="fullName" type="text" autofocus>
+								<input class="form-control" value="<%= typeof fullName !== 'undefined' ? fullName : '' %>" placeholder="Họ tên" required name="fullName" type="text" autofocus>
 							</div>
 
 							<div class="form-group">
-								<input class="form-control" placeholder="E-mail" required name="email" type="email">
+								<input class="form-control" value="<%= typeof email !== 'undefined' ? email : '' %>" placeholder="E-mail" required name="email" type="email">
 							</div>
 
 							<div class="form-group">
@@ -52,4 +54,13 @@
 	</div><!-- /.row -->	
 </body>
 
+<script>
+    // Tự động ẩn thông báo sau 1 giây
+    const errorAlert = document.getElementById('alert');
+    if (errorAlert) {
+      setTimeout(() => {
+        errorAlert.style.display = 'none';
+      }, 1000); // 1000ms = 1 giây
+    }
+</script>
 </html>
