--- a/src/apps/views/admin/order/trash.ejs
+++ b/src/apps/views/admin/order/trash.ejs
@@ -33,8 +33,8 @@
 		<div class="row">
 			<div class="col-md-12">
 					<div class="panel panel-default">
-							<% if(success.length >= 1){ %>
-								<div class="alert alert-success"><%= success%></div>
+							<% if(messages.success){ %>
+								<div id="alert" class="alert alert-success"><%= messages.success%></div>
 							<% } %>
 							<div class="panel-body">
 								<table 
