--- a/src/apps/views/admin/products/add_product.ejs
+++ b/src/apps/views/admin/products/add_product.ejs
@@ -21,9 +21,11 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <%if(error) {%>
-                                <div class="alert alert-danger"><%=error%></div>
-                            <%}%>
+                            <% if (typeof error !== 'undefined') { %>
+                                <div id="alert" class="alert alert-danger">
+                                  <%= error %>
+                                </div>
+                            <% } %>
                             <form role="form" method="post" action="/admin/product/store" enctype="multipart/form-data">
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -33,12 +35,12 @@
                                                                     
                                     <div class="form-group">
                                         <label>Giá sản phẩm</label>
-                                        <input required name="price" type="number" min="0" class="form-control" value="<%= typeof price !== 'undefined' ? price : '' %>">
+                                        <input required name="price" type="number" class="form-control" value="<%= typeof price !== 'undefined' ? price : '' %>">
                                     </div>
 
                                     <div class="form-group">
                                         <label>Giảm giá</label>
-                                        <input name="sale" type="number" min="0" class="form-control" value="<%= typeof sale !== 'undefined' ? sale : '' %>">
+                                        <input name="sale" type="number" class="form-control" value="<%= typeof sale !== 'undefined' ? sale : '0' %>">
                                     </div>
 
                                     <div class="form-group">
@@ -104,5 +106,15 @@
 		
 	</div>	<!--/.main-->	
 </body>
+
+<script>
+    // Tự động ẩn thông báo sau 1 giây
+    const errorAlert = document.getElementById('alert');
+    if (errorAlert) {
+      setTimeout(() => {
+        errorAlert.style.display = 'none';
+      }, 1000); // 1000ms = 1 giây
+    }
+</script>
 
 </html>
