--- a/src/apps/views/admin/products/edit_product.ejs
+++ b/src/apps/views/admin/products/edit_product.ejs
@@ -21,9 +21,11 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <%if(error) {%>
-                        	    <div class="alert alert-danger"><%=error%></div>
-                            <%}%>
+                            <% if (typeof error !== 'undefined') { %>
+                                <div id="alert" class="alert alert-danger">
+                                  <%= error %>
+                                </div>
+                            <% } %>
                             <form role="form" method="post" enctype="multipart/form-data">
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -103,5 +105,15 @@
 		
 	</div>	<!--/.main-->	
 </body>
+
+<script>
+    // Tự động ẩn thông báo sau 1 giây
+    const errorAlert = document.getElementById('alert');
+    if (errorAlert) {
+      setTimeout(() => {
+        errorAlert.style.display = 'none';
+      }, 1000); // 1000ms = 1 giây
+    }
+</script>
 
 </html>
