--- a/src/apps/views/site/auth/register.ejs
+++ b/src/apps/views/site/auth/register.ejs
@@ -12,13 +12,13 @@
         <div class="form-container" id="signup-form">
             <h1>Sign Up</h1>
             <form method="post">
-                <% if(success.length >= 1){ %>
-                    <label style="color: green;"><%=success%></label>
+                <% if(messages.success){ %>
+                    <label id="alert" style="color: green;"><%=messages.success%></label>
                 <% } %>
-
-                <%if(error) { %>
-                    <label style="color: red;"><%=error%></label>
-                <%}%>
+                
+                <% if (typeof error !== 'undefined') { %>
+                    <label id="alert" style="color: red;"><%=error%></label>
+                <% } %>
                 <label for="new-username">Họ và tên</label>
                 <input type="text" id="new-username" name="fullName" value="<%= typeof fullName !== 'undefined' ? fullName : '' %>" required>
                 <label for="new-email">Email</label>
@@ -52,7 +52,15 @@
             } else {
                 x.type = "password";
             }
-        } 
+        }
+        
+        // Tự động ẩn thông báo sau 1 giây
+        const errorAlert = document.getElementById('alert');
+        if (errorAlert) {
+        setTimeout(() => {
+            errorAlert.style.display = 'none';
+        }, 1000); // 1000ms = 1 giây
+        }
     </script>
 </body>
 </html>
