--- a/src/apps/views/site/auth/resetPass.ejs
+++ b/src/apps/views/site/auth/resetPass.ejs
@@ -13,13 +13,13 @@
         <div class="form-container" id="login-form">
             <h1>Quên mật khẩu</h1>
             <form method="post">
-                <% if(success.length >= 1){ %>
-                    <label style="color: green;"><%=success%></label>
+                <% if(messages.success){ %>
+                    <label id="alert" style="color: green;"><%=messages.success%></label>
                 <% } %>
                 
-                <%if(error) { %>
-                    <label style="color: red;"><%=error%></label>
-                <%}%>
+                <% if (typeof error !== 'undefined') { %>
+                    <label id="alert" style="color: red;"><%=error%></label>
+                <% } %>
                 <label for="username">Mật khẩu mới</label>
                 <input type="password" id="password" name="newPassword" required autofocus>
                 <label for="username">Nhập lại mật khẩu</label>
@@ -31,4 +31,14 @@
         </div>
     </div>
 </body>
+
+<script>
+    // Tự động ẩn thông báo sau 1 giây
+    const errorAlert = document.getElementById('alert');
+    if (errorAlert) {
+      setTimeout(() => {
+        errorAlert.style.display = 'none';
+      }, 1000); // 1000ms = 1 giây
+    }
+</script>
 </html>
