--- a/src/apps/views/site/product/product.ejs
+++ b/src/apps/views/site/product/product.ejs
@@ -58,6 +58,47 @@
                 <h3>Giới thiệu sản phẩm</h3>
                 <p><%-productById.description%></p>
             </div>
+
+            <div class="product-comment col-lg-12">
+                <%if(!userSiteId) { %>
+                    <h3>Bình luận sản phẩm (bạn cần phải đăng nhập !)</h3>
+                <%} else { %>
+                    <h3>Bình luận sản phẩm</h3>
+                    <% if (messages.error) { %>
+                        <div class="alert alert-danger">
+                          <%= messages.error %>
+                        </div>
+                    <% } %>
+                    <form method="post">
+                        <div class="form-group">
+                            <label>Nội dung:</label>
+                            <textarea name="content" required rows="4" class="form-control"></textarea>     
+                        </div>
+                        <button type="submit" name="sbm" class="btn btn-primary">Gửi</button>
+                    </form> 
+                <%}%>
+            </div>
+
+            <div class="product-commentList col-md-12 col-sm-12">
+                <%if(comments.length===0) { %>
+                    <p>Chưa có bình luận nào !</p>
+                <%} else { %>
+                    <%for(comment of comments) { %>
+                        <div class="comment-item">
+                            <div>
+                                <p class="comment-fullName"><%=comment.fullNameSite%> - <%=moment(comment.createdAt).format('DD/MM/YYYY')%></p>
+                                <p><%=comment.content%></p>
+                                <% if(comment.userSiteId === userSiteId) {%>
+                                    <a href="/product-<%=product.slug%>.<%=product._id%>/editComment-<%=comment._id%>" class="btn btn-outline-primary btn-sm">Chỉnh sửa</a>
+                                    <a href="/removeComment-<%=comment._id%>" class="btn btn-outline-danger btn-sm">Xóa</a>
+                                <%}%>
+                                <p></p>
+
+                            </div> 
+                        </div>
+                    <%}%>
+                <%}%>
+            </div>
             
             <%if(productByCatId.length>0) {%>
                 <div style="margin-top: 30px;" id="products" class="col-lg-12">
