--- a/src/apps/views/admin/comment/searchComment.ejs
+++ b/src/apps/views/admin/comment/searchComment.ejs
@@ -4,30 +4,33 @@
 
 
 <body>	
-	<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">			
+	<div class="col-sm-9 col-lg-10 col-lg-offset-2 main">			
 		<div class="row">
 			<ol class="breadcrumb">
 				<li><a href="/admin/dashboard"><svg class="glyph stroked home"><use xlink:href="#stroked-home"></use></svg></a></li>
-				<li class="active">Quản lý banner</li>
+				<li class="active">Quản lý bình luận</li>
 			</ol>
-		</div><!--/.row-->
+		</div>
 		
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">Quản lý banner</h1>
+				<h1 class="page-header">Kết quả tìm kiếm: "<%=keyword%>"</h1>
 			</div>
-		</div><!--/.row-->
+		</div>
+
 		<div id="toolbar" class="toolbar-item">
-            <a href="/admin/banner/create" class="btn btn-success">
-                <i class="glyphicon glyphicon-plus"></i> Thêm banner
-            </a>
-        </div>
+			<form class="form-inline" action="/admin/search/comment">
+				<input style="border: 1px solid #000;" name="keyword" class="form-control mt-3" type="search" required placeholder="Tìm kiếm..." aria-label="Search">
+				<button class="btn btn-danger mt-3" type="submit">Lọc</button>
+			</form>
+		</div>
+
 		<div class="row">
 			<div class="col-md-12">
 					<div class="panel panel-default">
-						<% if(messages.success){ %>
-							<div id="alert" class="alert alert-success"><%= messages.success%></div>
-						<% } %>
+                        <% if(messages.success){ %>
+                            <div id="alert" class="alert alert-success"><%= messages.success%></div>
+                        <% } %>
 							<div class="panel-body">
 								<table 
 									data-toolbar="#toolbar"
@@ -35,53 +38,47 @@
 		
 									<thead>
 									<tr>
-										<th>Ảnh banner</th>
-										<th>Thể loại</th>
+										<th>Email</th>
+										<th>Tên tài khoản</th>
+										<th>Tên sản phẩm</th>
+										<th>Nội dung bình luận</th>
 										<th>Hành động</th>
 									</tr>
 									</thead>
 									<tbody>
-										<%for(baner of banner) {%>
+										<%for(comment of searchComment) {%>
 											<tr>
-												<td style="text-align: center"><img width="500" height="200" src="/static/images/<%=baner.img_banner%>" /></td>
-												<td><span class="label label-<%=baner.category==='Slider'?'success':'danger'%>"><%=baner.category%></span></td>
+												<td><%=comment.emailSite%></td>
+												<td><%=comment.fullNameSite%></td>
+												<td><%=comment.prd_id.name%></td>
+												<td><%=comment.content%></td>
 												<td class="form-group">
-													<a href="/admin/banner/edit/<%=baner._id%>" class="btn btn-primary">Thay đổi</a>
-													<a href="" class="btn btn-danger" data-toggle="modal" data-id="<%=baner._id%>" data-target="#delete-item">Xóa</a>
+													<a href="" class="btn btn-danger" data-toggle="modal" data-id="<%=comment.id%>" data-target="#delete-item">Xóa</a>
 												</td>
 											</tr>
 										<%}%>
 									</tbody>
 								</table>
 							</div>
-							<div class="panel-footer">
-								<nav aria-label="Page navigation example">
-									<ul class="pagination">
-										<li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
-										<li class="page-item"><a class="page-link" href="#">1</a></li>
-										<li class="page-item"><a class="page-link" href="#">2</a></li>
-										<li class="page-item"><a class="page-link" href="#">3</a></li>
-										<li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
-									</ul>
-								</nav>
-							</div>
-						</div>
-			</div>
-		</div><!--/.row-->
-	</div>	<!--/.main-->
 
-	 <!--confirm delete-->
-	 <div id="delete-item" class="modal" tabindex="-1">
+							
+					</div>
+			</div>
+		</div>
+	</div>
+
+	<!--confirm delete-->
+	<div id="delete-item" class="modal" tabindex="-1">
 		<div class="modal-dialog">
 		  <div class="modal-content">
 			<div class="modal-header">
-			  <h5 class="modal-title">Xóa banner ?</h5>
+			  <h5 class="modal-title">Xóa danh mục ?</h5>
 			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
 			  </button>
 			</div>
 			<div class="modal-body">
-			  <p>Bạn có muốn xóa banner này không ?</p>
+			  <p>Bạn có muốn xóa danh mục này không ?</p>
 			</div>
 			<div class="modal-footer">
 			  <button type="button" class="btn btn-primary" data-dismiss="modal">Hủy</button>
@@ -98,19 +95,20 @@
 			var itemId;
 			var deleteForm = document.forms['delete-form'];
 			var btnDelete = document.getElementById("btn-delete");
-
+		
 			$('#delete-item').on('show.bs.modal', function (event) {
 				var button = $(event.relatedTarget); 
 				itemId = button.data('id');
 			});
 
 			btnDelete.onclick = function() {
-				deleteForm.action = '/admin/banner/delete/' + itemId + '?_method=DELETE';
-				deleteForm.submit();
+				console.log(itemId);
+				deleteForm.action = '/admin/comment/delete/' + itemId + '?_method=DELETE';
+				deleteForm.submit(); 
 			}
-		})
+		}) 
 
-		// Tự động ẩn thông báo sau 1 giây
+        // Tự động ẩn thông báo sau 1 giây
 		const errorAlert = document.getElementById('alert');
 		if (errorAlert) {
 		setTimeout(() => {
