--- a/src/apps/views/admin/users/search-user.ejs
+++ b/src/apps/views/admin/users/search-user.ejs
@@ -28,9 +28,9 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="panel panel-default">
-                    <% if(success.length >= 1){ %>
-                        <div class="alert alert-success"><%= success%></div>
-                    <% } %>
+                    <% if(messages.success){ %>
+						<div id="alert" class="alert alert-success"><%= messages.success%></div>
+					<% } %>
 					<div class="panel-body">
                         <table 
                             data-toolbar="#toolbar"
@@ -68,27 +68,17 @@
                             </tbody>
 						</table>
                     </div>
-                    <div class="panel-footer">
-                        <nav aria-label="Page navigation example">
+					<div class="panel-footer">
+						<nav aria-label="Page navigation example">
 							<ul class="pagination">
-                                <%if(hasPrev) {%>
-                                    <li class="page-item"><a class="page-link" href="/admin/search/user?keyword=<%= keyword%>&page=<%=prev%>">&laquo;</a></li>
-                                <%}%>
-                                
-                                <%for(i of pages) {%>
-                                    <%if(i === "...") {%>
-                                        <li class="page-item"><span class="page-link"><%=i%></span></li>
-                                    <%} else {%>
-                                        <li class="page-item <%= page===i?'active':''%>"><a class="page-link" href="/admin/search/user?keyword=<%= keyword%>&page=<%=i%>"><%=i%></a></li>
-                                    <%}%>
-                                <%}%>
-
-                                <%if(hasNext) {%>
-                                    <li class="page-item"><a class="page-link" href="/admin/search/user?keyword=<%= keyword%>&page=<%=next%>">&raquo;</a></li>
-                                <%}%>
-                            </ul>
-                        </nav>
-                    </div>
+								<li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
+								<li class="page-item"><a class="page-link" href="#">1</a></li>
+								<li class="page-item"><a class="page-link" href="#">2</a></li>
+								<li class="page-item"><a class="page-link" href="#">3</a></li>
+								<li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
+							</ul>
+						</nav>
+					</div>
 				</div>
 			</div>
 		</div><!--/.row-->	
@@ -199,6 +189,14 @@
 				lockForm.submit();
 			}
 		})
+
+		// Tự động ẩn thông báo sau 1 giây
+		const errorAlert = document.getElementById('alert');
+		if (errorAlert) {
+			setTimeout(() => {
+				errorAlert.style.display = 'none';
+			}, 1000); // 1000ms = 1 giây
+		}
 	</script>
 	<script src="js/jquery-3.7.0.js"></script>
 	<script src="js/bootstrap.js"></script>
